--- a/html-template.html
+++ b/html-template.html
@@ -8,9 +8,11 @@
 
   <meta charset="UTF-8">
   <title>Stuff I Think About</title>
+  <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&family=Pacifico&family=Yanone+Kaffeesatz:wght@300&display=swap" 
+        rel="stylesheet">
 
   <!-- Add a CSS Reference Here! -->
-
+  <link rel="stylesheet"  href="stylesheet.css"
 
 </head>
 
@@ -23,7 +25,7 @@
   <h3>Here are a few things I've thought about</h3>
 
   <h4>Thought Blurb 1:</h4>
-  <p>
+  <p class="Dancing">
     <!-- Add a class here! Bold the text! -->
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet,
     consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -36,7 +38,7 @@
   </p>
 
   <h4>Thought Blurb 2:</h4>
-  <p>
+  <p class="Pacifico">
     <!-- Add a class here! Enlarge the font to 24px -->
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet,
     consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing
@@ -49,7 +51,7 @@
   </p>
 
   <h4>Thought Blurb 3:</h4>
-  <p>
+  <p class="Yanone">
     <!-- Add a class here! Increase the line height to 50px -->
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet,
     consectetur adipisicing elit. Praesentium nobis tempora cum. Debitis ipsa, corporis odio temporibus minima et molestias dolorem, sit unde id soluta perspiciatis eos laboriosam tempore molestiae? Lorem ipsum dolor sit amet, consectetur adipisicing
