--- a/index.html
+++ b/index.html
@@ -7,17 +7,32 @@
     <title>
         Grid Practice
     </title>
+    <!-- <style>
+        .row {
+            border: solid 2px black;
+        }
+        .col-3 {
+            border: solid 2px red;
+        }
+        .col-9 {
+            border: solid 2px green;
+        }
+    </style> -->
 </head>
 
 <body>
+    <!-- Dark Navigation Bar (Top)-->
     <nav class="navbar navbar-dark bg-dark">
             <a class="navbar-brand" href="#">Navbar</a>
     </nav>
+    
     <div class="container">
+        <!--"About Me" independent row-->
         <div class="row">
             <div class="col-9">
                 <h1>About Me</h1>
 
+                <!---->
                 <div class="row">            
                     <div class="col-3">
                         <img class="img-thumbnail" src="https://is5-ssl.mzstatic.com/image/thumb/Purple128/v4/d1/39/76/d139764e-61d7-aa42-05cf-347b47e9a457/source/256x256bb.jpg" alt="Image">
