--- a/index.html
+++ b/index.html
@@ -27,19 +27,20 @@
     </nav>
     
     <div class="container">
-        <!--"About Me" independent row-->
+        <!--"About Me" heading within first row-->
         <div class="row">
             <div class="col-9">
                 <h1>About Me</h1>
 
-                <!---->
+                <!--Col-3 within second row containing image-->
                 <div class="row">            
                     <div class="col-3">
                         <img class="img-thumbnail" src="https://is5-ssl.mzstatic.com/image/thumb/Purple128/v4/d1/39/76/d139764e-61d7-aa42-05cf-347b47e9a457/source/256x256bb.jpg" alt="Image">
                     </div>
 
+                    <!--Col-9 within second row containing paragraph-->
                     <div class="col-9">
-                        <p>
+                        <p style="text-indent: 50px;">
                             Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor 
                             incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis 
                             nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
@@ -50,6 +51,8 @@
                     </div>
                 </div>
             </div>
+
+            <!--Col-3 within first row containing card-->
             <div class="col-3">
                 <div class="card">
                     <div class="card-body">
